# neuralnetwork

./: CMakeLists.txt
headers/: NeuralNetwork.h  Neuron.h  TrainingData.h
src/: NeuralNetwork.cpp  main.cpp
